...
            app:layout_collapseParallaxMultiplier="0.7"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:background="@color/colorPrimary" />

        <EditText
            android:id="@+id/search_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_search"
            android:layout_below="@+id/my_toolbar_as"
            android:textSize="@dimen/subtitle_text_size"
            android:textStyle="bold"
            android:padding="@dimen/spacing_small"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/card_recycler_view"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/search_input" />

    </RelativeLayout>
...
