<resources>
    <string name="app_name" translatable="false">Movie Database Explorer</string>
    <string name="language_label">Langue</string>
    <string name="original_title">Titre original</string>
    <string name="vote_average">Moyenne des votes</string>
    <string name="release_date">Date de sortie</string>
    <string name="hint_search">Search</string>
    <string name="label_cast" translatable="false">Casting</string>
    <string name="label_similar">Similar movies</string>
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sin
...
